--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -1,46 +1,64 @@
-@inproceedings{Deinzer00:VSC,
- author = {Deinzer, F. and Denzler, J. and Niemann, H.},
- title = {Viewpoint Selection - A Classifier Independent Learning Approach},
- year  = {2000},
- booktitle = {IEEE Southwest Symposium on Image Analysis and Interpretation, Austin, Texas, USA},
- publsiher = {IEEE Computer Society Press},
- address = {Los Alamitos, California},
- ISBN = {0-7695-0595-3},
- pages = {209--213}
+@Article{chowningPaper,
+  author =       "John M. Chowning",
+  title =        "The Synthesis of Complex Audio Spectra by Means of Frequency Modulation",
+  journal =      "Journal of the Audio Engineering Society",
+  pages =        "526--534",
+  year =         "1973"
 }
 
-@mastersthesis{Graessl:02:EDD,
-author = {Christoph Gr{\"a}{\ss}l},
-INSTITUTION =  {Lehrstuhl f{\"u}r Mustererkennung},
-type = {Diplomarbeit},
-title = {Erweiterung des diskret-statistischen Eigenraums auf kontinuierliche Objektmodelle},
-school = {Lehrstuhl f\"{u}r Mustererkennung (Informatik 5), Institut f\"ur Informatik, Universit\"at Erlangen-N\"urnberg},
-year = {2002},
-noreview = {no}
+@MISC{fmSignalkunde,
+  author = "Detlef Mietke",
+  title = "Frequenzmodulation",
+  howpublished = "http://elektroniktutor.de/signalkunde/fm.html",
+  year = "Aufgerufen am 31.05.2015, 16:26 Uhr"
+  }
+
+@Book{soundofinnovation,
+author = "Andrew J. Nelson",
+title =" The sound of innovation - Stanford and the computer music revolution",
+year = "2015",
+publisher = "MIT Press",
+number = "978-0-262-02876-9"
 }
 
-@book{Bronstein97,
-  author={Bronstein, I.},
-  title={Taschenbuch der Mathematik},
-  year={1997},
-  publisher= {Harri Deutsch},
-  address={Frankfurt am Main},
+@MISC{fatherofdigitalmusik,
+  author = "Zachary Crockett",
+  title = "The Father of the Digital Synthesizer",
+  howpublished = "http://priceonomics.com/the-father-of-the-digital-synthesizer/",
+  year = "23.03.2015"
+  }
+
+@Misc{fmGS1,
+  author = "Markus Fiedler ",
+  title = "Die FM-Synthese, Ein Überblick",
+  howpublished = "http://www.markus-fiedler.de/fm/fm.html",
+  year = "2001"
+  }
+
+@Book{fmtheory,
+author = "John M. Chowning and David Bristow",
+title = "FM Theory \& Applications - By Musicians for Musicians",
+year = "1986",
+publisher = "Yamaha Music Foundation",
+number = "4-636-17482-8"
 }
 
-@Article{catmull74b,
-  author =       "E. Catmull and R. Rom",
-  title =        "A Class of Local Interpolating Splines",
-  journal =      "Computer Aided Geometric Design",
-  pages =        "317--326",
-  year =         "1974",
-  editor =       "R. E. Barnhill and R. F. Riesenfeld",
-  publisher =    "Academic Press",
+@Book{matheBuch,
+author = "Peter Stingl",
+title = "Mathematik für Fachhochschulen",
+year = "1981",
+publisher = "Carl Hanser Verlag München Wien",
+number = "3-446-13481-6"
 }
 
-@misc{POVRAY:WEB,
-  key = {Povray},
-  title = {The {P}ersistence of {V}ision {R}aytracer ({POV}-{R}ay)},
-  url = {http://www.povray.org/},
-  note = {http://www.povray.org, zuletzt besucht am 01. Februar 2005}
+@Misc{phasenhub,
+author = "Klaus Lipinski, Dipl.-Ing. der Nachrichtentechnik",
+title = "Frequenzhub - frequency deviation",
+howpublished = "http://www.itwissen.info/definition/lexikon/Frequenzhub-frequency-deviation.html",
+year = "Aufgerufen am 31.05.2015"
 }
+
+
+
+
 
