--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -19,6 +19,7 @@
 	{ß}{{\ss}}1
 	{=}{$\rightarrow{}$}{1},
   	breaklines=true,                % sets automatic line breaking
+	columns=flexible
 }
 
 \graphicspath{{./Kapitel/img/}}
@@ -26,7 +27,9 @@
 %%%
 %%% Style-Definition des Literaturverzeichnis
 %%%
-%%\bibliographystyle{alpha}
+%%
+
+\bibliographystyle{alpha}
 \bibliographystyle{geralpha}
  
 %%\setlength{\parindent}{0pt} %kein Einzug beim Absatzbegin
@@ -53,5 +56,6 @@
 
 \input{Kapitel/Fazit.tex}
 
+\bibliography{seminar}
 
 \end{document}
