Added refs to bibliography for some images

--- a/Dok/Kapitel/Einfuehrung.tex
+++ b/Dok/Kapitel/Einfuehrung.tex
@@ -94,7 +94,7 @@ Eine Fotografie der Gründer von CCRMA ist auf Abbildung \ref{fig:foundersCCRMA}
   \includegraphics[width=0.95\textwidth]{Founders_CCRMA.png}
 \caption{Gründer von CCRMA. Stehend von Links nach rechts: Leland Smith, John Grea, John Chowning und Loren Rush. Sitzend: Andy Moorer.}
 \label{fig:foundersCCRMA}
-Quelle: The sound of innovation - Abbildung 4.1
+Quelle: \cite{soundofinnovation} - Abbildung 4.1
 \end{figure}
 
 Nachdem Yamaha die Technik der FM-Synthese lizenziert hatte, brachten die Firma nach einem Prototypen im Jahre 1980 den ersten digitalen FM-Synthesizer GS1 und zwei Jahre später mit dem GS2 eine kleinere und handlichere Version des GS1 heraus. Die Geräte kosteten um die 30.000 DM für den GS1 bzw. 16.000 DM für den GS2 und waren deshalb nur für ausgewählte Musiker gedacht. Der Durchbruch gelang im Jahre 1983 mit dem DX7. Dieser konnte parallel 16 Stimmen verarbeiten und kostete ca. 4.700 DM. Preislich ähnliche und damals übliche analoge subtraktive Synthesizer konnten lediglich 4 Stimmen verarbeiten \cite{fmGS1}. Ein Bild des DX7 ist in Abbildung \ref{fig:dx7} zu sehen.
