--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -14,7 +14,7 @@ Am besten verdeutlichen kann man dies anhand des Einheitskreises. Abbildung \ref
 \includegraphics[width=0.95\textwidth]{Unit_Circle.png}
 \caption{Der Einheitskreis}
 \label{fig:unitcircle}
-Quelle: FM: Theory and Application: Fig. 2.6
+Quelle: \cite{fmtheory} - Fig. 2.6
 \end{figure}
 
 Dabei gilt: 
